--- a/build.gradle
+++ b/build.gradle
@@ -129,13 +129,11 @@ publishing {
     
     repositories {
         maven {
-            name = "OSSRH"
-            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            name = "CentralPortal"
+            url = "https://central.sonatype.com/api/v1/publisher/upload?publishingType=AUTOMATIC"
             credentials {
-                username = project.findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME") ?: ""
-                password = project.findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD") ?: ""
+                username = project.findProperty("centralUsername") ?: System.getenv("CENTRAL_USERNAME") ?: ""
+                password = project.findProperty("centralPassword") ?: System.getenv("CENTRAL_PASSWORD") ?: ""
             }
         }
     }
