--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ plugins {
 }
 
 group = 'com.betatel.esim'
-version = '1.0.1'
+// Version is passed via -PprojVersion=x.y.z from CI/CD or defaults to 0.0.0-SNAPSHOT
+version = project.findProperty('projVersion') ?: '0.0.0-SNAPSHOT'
 
 wrapper {
     gradleVersion = '8.14.3'
