--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ plugins {
     id 'signing'
     id 'java-library'
     id 'com.diffplug.spotless' version '7.2.1'
+    id 'com.gradleup.nmcp' version '0.0.9'
 }
 
 group = 'com.betatel.esim'
@@ -128,15 +129,14 @@ publishing {
         }
     }
     
-    repositories {
-        maven {
-            name = "CentralPortal"
-            url = "https://central.sonatype.com/api/v1/publisher/upload?publishingType=AUTOMATIC"
-            credentials {
-                username = project.findProperty("centralUsername") ?: System.getenv("CENTRAL_USERNAME") ?: ""
-                password = project.findProperty("centralPassword") ?: System.getenv("CENTRAL_PASSWORD") ?: ""
-            }
-        }
+}
+
+// Configure Maven Central Portal publishing
+nmcp {
+    publishAllProjectsProbablyBreakingProjectIsolation {
+        username = project.findProperty("centralUsername") ?: System.getenv("CENTRAL_USERNAME") ?: ""
+        password = project.findProperty("centralPassword") ?: System.getenv("CENTRAL_PASSWORD") ?: ""
+        publicationType = "AUTOMATIC"  // Automatically publish after validation
     }
 }
 
