Changed data type for dates (Int -> Long)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,8 @@
+# ===================================
+# Gradle Properties
+# ===================================
+# This file should be committed to version control
+# For sensitive values, use gradle.properties in GRADLE_USER_HOME (~/.gradle/)
 
 # Kotlin
 kotlin.code.style=official
@@ -21,18 +26,24 @@ POM_ARTIFACT_ID=esim-sdk-kotlin
 POM_NAME=Betatel eSIM Kotlin SDK
 POM_DESCRIPTION=Kotlin SDK for Betatel eSIM API - provides easy integration with eSIM management services
 POM_INCEPTION_YEAR=2024
-POM_URL=https://github.com/companybetatel/esim-sdk-kotlin
+POM_URL=https://github.com/betatel/esim-sdk-kotlin
 
-POM_LICENSE_NAME=GNU General Public License v3.0
-POM_LICENSE_URL=https://www.gnu.org/licenses/gpl-3.0.html
+POM_LICENSE_NAME=MIT License
+POM_LICENSE_URL=https://opensource.org/licenses/MIT
 POM_LICENSE_DIST=repo
 
-POM_SCM_URL=https://github.com/companybetatel/esim-sdk-kotlin
-POM_SCM_CONNECTION=scm:git:git://github.com/companybetatel/esim-sdk-kotlin.git
-POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/companybetatel/esim-sdk-kotlin.git
+POM_SCM_URL=https://github.com/betatel/esim-sdk-kotlin
+POM_SCM_CONNECTION=scm:git:git://github.com/betatel/esim-sdk-kotlin.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com/betatel/esim-sdk-kotlin.git
 
 POM_DEVELOPER_ID=betatelltd
 POM_DEVELOPER_NAME=Betatel LTD
 POM_DEVELOPER_EMAIL=info@betatel.com
 POM_DEVELOPER_ORGANIZATION=Betatel
 POM_DEVELOPER_ORGANIZATION_URL=https://betatel.com
+
+# Maven Central Publishing (credentials should be in ~/.gradle/gradle.properties)
+# OSSRH_USERNAME=your-username
+# OSSRH_PASSWORD=your-password
+# SIGNING_KEY=your-signing-key
+# SIGNING_PASSWORD=your-signing-password
